# Citrust

./: .gitignore  Dockerfile  README.md  novnc.sh  run_qemu.sh
.devcontainer/: devcontainer.json
bootloader/: Cargo.toml  build.sh
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
citrust/: Cargo.toml
citrust/src/: main.rs
kernel/: Cargo.toml  build.sh  x86-64-CitrustOS.json
kernel/.cargo/: config.toml
kernel/src/: graphics.rs  lib.rs  main.rs
