[package]
name = "bootloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
rlibc = "1.0.0"
elf_rs = { git = "https://github.com/vincenthouyi/elf_rs.git" }
